# RAG-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: config.py  logging.py
prompts/: system_prompt.prompt.md
scripts/ingestion/: ingestion.py  test_retrieval.py
src/RAG/: agent_graph.py  chat_history.py  retriever.py
src/interface/: app.py
